feat: add an admin command
